# services/card-service/src/main/kotlin/com/bankapp/cardservice/controller/CardController.kt
@@ -6,6 +6,7 @@ import com.bankapp.cardservice.dto.CardResponse
 import com.bankapp.cardservice.service.CardService
 import jakarta.validation.Valid
 import org.springframework.http.HttpStatus
+import org.springframework.web.bind.annotation.DeleteMapping
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.PostMapping
@@ -51,4 +52,10 @@ class CardController(
     @PostMapping("/{cardId}/close")
     fun closeCard(@PathVariable cardId: String): CardResponse =
         cardService.closeCard(cardId)
+
+    @DeleteMapping("/{cardId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    fun deleteCard(@PathVariable cardId: String) {
+        cardService.deleteCard(cardId)
+    }
 }
